--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
         <h1 class="h1-others" id="other">Apps which are useful for education</h1>
         <ul class="ul-top-others container">
             <li class="li-top brave">
-                <p class="number"></p>
+                <a href="#">
+<p class="number"></p>
                 <img src="./img/brave.webp" alt="steam" class="li-img" />
                 <p class="program-name">Brave</p>
+                </a>
+                
             </li>
             <li class="li-top">
                 <p class="number"></p>
