--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <main>
         <div class="carousel">
             <div class="carousel-inner" id="carouselInner">
-                <div class="carousel-item"><img src="/img/image-slider-1.png" alt="Slide 1"></div>
-                <div class="carousel-item"><img src="https://via.placeholder.com/600x300?text=Slide+2" alt="Slide 2"></div>
-                <div class="carousel-item"><img src="https://via.placeholder.com/600x300?text=Slide+3" alt="Slide 3"></div>
+                <div class="carousel-item"><img src="/img/slider-images/Group 18.png" alt="Slide 1"></div>
+                <div class="carousel-item"><img src="/img/slider-images/Group 19.png" alt="Slide 2"></div>
+                <div class="carousel-item"><img src="/img/slider-images/Group 20.png" alt="Slide 3"></div>
             </div>
             <button class="carousel-button prev" onclick="moveSlide(-1)">❮</button>
             <button class="carousel-button next" onclick="moveSlide(1)">❯</button>
