--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     alt="App One Image">
                 <br><br>
                 <h3>LibreOffice</h3>
-                <p>A brief description of App One. Ideal for productivity enthusiasts.</p>
+                <p>Powerful </p>
                 <ul>
                     <li>Feature 1: Lightweight</li>
                     <li>Feature 2: Cross-platform</li>
