--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linux App Store Remastered V1</title>
     <link rel="stylesheet" href="./css-v1/styles-v1.css">
-    <style>
-
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -30,6 +29,41 @@
         </nav>
     </header>
 
+    <main>
+        <section class="section-carousel">
+<div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./img/VLC.png" class="d-block" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="./img/vscode.svg" class="d-block" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="./img/ad-img.png" class="d-block" alt="...">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+        </section>
+    </main>
     <div class="content">
         <div class="app-list">
             <div class="app-card">
@@ -38,7 +72,7 @@
                     alt="App One Image">
                 <br><br>
                 <h3>LibreOffice</h3>
-                <p>Powerful </p>
+                <p>Powerful office where you can do anything you want!</p>
                 <ul>
                     <li>Feature 1: Lightweight</li>
                     <li>Feature 2: Cross-platform</li>
@@ -70,8 +104,8 @@
             <div class="app-card">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Github-desktop-logo-symbol.svg/2048px-Github-desktop-logo-symbol.svg.png"
                     alt="App Four Image">
-                <h3>App Four</h3>
-                <p>Enhance your gaming experience with this tool.</p>
+                <h3>Github Deskto</h3>
+                <p>Save your favourite project!</p>
                 <ul>
                     <li>Feature 1: API support</li>
                     <li>Feature 2: Customizable UI</li>
@@ -129,5 +163,8 @@
                 </div>
             </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
 </html>
