--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
         <main>
 <section>
     <div class="log-in">
-<h1>Enter Your Name</h1>
+<h1 class="enter-name-h1">Enter Your Name</h1>
 <div>
     <input class="input" type="text" id="nameInput" placeholder="Type your name here" />
 </div>
