--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="first-section">
             <h1>The powerful web-app store for Linux Users</h1>
             <p>The best of the best apps</p>
         </section>
