--- a/index.html
+++ b/index.html
@@ -16,25 +16,21 @@
 
 <body>
     <header class="main-header">
-        <div class="logo">LinuxAppStore</div>
-        <nav class="navbar">
-            <button class="hamburger" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li>
-                    <p>Current user:</p>
-                    <p id="displayName"></p>
-                </li>
-            </ul>
-        </nav>
+    <nav class="navbar">
+        <div class="logo">MySite</div>
+        <ul class="nav-links">
+            <li><a href="#" class="nav-item active">Home</a></li>
+            <li><a href="#" class="nav-item">About</a></li>
+            <li><a href="#" class="nav-item">Services</a></li>
+            <li><a href="#" class="nav-item">Portfolio</a></li>
+            <li><a href="#" class="nav-item">Contact</a></li>
+        </ul>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
     </header>
     <main>
         <section class="first-section">
